--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
         value: http://billing-service:3000
 
   # Auth Service
-  - type: private-service
+  - type: pserv
     name: auth-service
     env: node
     plan: free
@@ -38,7 +38,7 @@ services:
         generateValue: true
 
   # Crawler Service
-  - type: private-service
+  - type: pserv
     name: crawler-service
     env: node
     plan: free
@@ -57,7 +57,7 @@ services:
         fromGroup: shared-storage
 
   # Detection Service
-  - type: private-service
+  - type: pserv
     name: detection-service
     env: node
     plan: free
@@ -70,7 +70,7 @@ services:
         fromGroup: shared-redis
 
   # Case Service
-  - type: private-service
+  - type: pserv
     name: case-service
     env: node
     plan: free
@@ -81,7 +81,7 @@ services:
         fromGroup: shared-database
 
   # Takedown Service
-  - type: private-service
+  - type: pserv
     name: takedown-service
     env: node
     plan: free
@@ -94,7 +94,7 @@ services:
         fromGroup: shared-redis
 
   # Billing Service
-  - type: private-service
+  - type: pserv
     name: billing-service
     env: node
     plan: free
